<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新…</string>
    <string name="not_updated_yet">暂未更新过</string>
    <string name="updated_at">上次更新于%1$s前</string>
    <string name="updated_just_now">刚刚更新</string>
    <string name="time_error">请求超时,请检查网络!</string>
    <string name="app_name">Find好友</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="modifyInformation">完善信息</string>
    <string name="nickName">昵称</string>
    <string name="birthDay">生日</string>
    <string name="age">年龄</string>
    <string name="height">身高</string>
    <string name="title">来交友吧</string>
    <string name="heightCM">身高(cm)</string>
    <string name="cancel">取消</string>
    <string name="done">完成</string>
    <string name="cm">厘米</string>
    <string name="realname">真实姓名</string>
    <string name="phone">电话</string>
    <string name="gender">性别</string>
    <string name="maritalStatus">婚姻状况</string>
    <string name="female">女</string>
    <string name="man">男</string>
    <string name="income">收入</string>
    <string name="work">职业</string>
    <string name="back">返回</string>
    <string name="save">保存</string>
    <string name="comefrom">来自</string>
    <string name="graduateschool">毕业学校</string>
    <string name="specialty">专业</string>
    <string name="sayhello">打招呼</string>
    <string name="title_activity_list_user_details">ListUserDetailsActivity</string>
    <string name="title_activity_my_si_xin_details">MySiXinDetails</string>
    <string name="sixintitle">我的私信</string>
    <string name="album">我的相册</string>
    <string name="personalconditions">征友条件</string>
    <string name="personalinfo">个人资料</string>
    <string name="systemconfig">系统设置</string>
    <string name="username">用户名</string>
    <string name="email">邮箱</string>
    <string name="education">学历</string>
    <string name="accountpassword">账户密码</string>
    <string name="abountus">关于我们</string>
    <string name="changeaccount">切换账户</string>
    <string name="title_activity_reply_mess">ReplyMessActivity</string>
    <string name="login">登录</string>
    <string name="password">密码</string>
    <string name="register">注册</string>
    <string name="rememberme">记住密码</string>
    <string name="autologin">自动登录</string>
    <string name="takephoto">拍照</string>
    <string name="importfromalbum">相册导入</string>
    <string name="importfromlocal">本地导入</string>
    <string name="date">日期</string>
    <string name="intro">自我介绍</string>
    <string name="passwordconfirm">确认密码</string>
    <string name="originpassword">原始密码</string>
    <string name="newpassword">新密码</string>
    <string name="newpasswordconfirm">重复新密码</string>
    <string name="dailylife">日常生活</string>
    <string name="drinkorno">是否喝酒</string>
    <string name="smokeorno">是否吸烟</string>
    <string name="housework">家务劳动</string>
    <string name="cooking">厨艺情况</string>
    <string name="userintro">自我介绍</string>
    <string name="mymessages">私信</string>
    <string name="send">发送</string>
    <string name="chooselanguage">选择语言</string>
    <string name="user">用户</string>
    <string name="messages">私信</string>
    <string name="myconcern">我的关注</string>
    <string name="me">我</string>
    <string name="languagewarn">注意：切换藏语前需要手机切换成藏语环境!以免异常!</string>
    <string name="receiver">收件人</string>
    <string name="theme">主题</string>
    <string name="messagecontent">私信内容</string>
    <string name="sendtime">发送时间</string>
    <string name="makefriends">关注好友</string>
    <string name="replymessage">回复私信</string>
    <string name="title_activity_refreshable_view">RefreshableView</string>
 <string name="suretologout">确定退出?</string>
  <string name="note">提示</string>
  <string name="sure">确认</string>
  <string name="timeout">请求超时,请检查网络!</string>
    <string name="loginsuccess">登陆成功!</string>
        <string name="dataerror">获取数据错误!</string>
         <string name="registersuccess">注册成功!</string>
          <string name="savesuccess">保存成功!</string>        
          <string name="neixindubai">内心独白</string>
          <string name="xiangxiziliao">详细资料</string>
          <string name="lianxifangshi">联系方式</string>
          <string name="zhengyouyaoqiu">征友要求</string>
          <string name="yonghuxinxi">用户信息</string>
          <string name="xingzuo">星座:</string>
          <string name="xuexing">血型:</string>
          <string name="tizhong">体重:</string>
          <string name="minzu">民族:</string>
          <string name="hashouse">是否有房:</string>
          <string name="haschaild">子女情况:</string>
          <string name="xiangmaoziping">相貌自评:</string>
          <string name="lianaileixing">恋爱类型:</string>
          <string name="juzhudi">居住地:</string>
          <string name="nianlingfanwei">年龄范围:</string>
          <string name="xueli">学历:</string>
          <string name="hascar">是否有车:</string>
          <string name="longtimeago">很久以前</string>
          <string name="cancelcare">取消关注</string>
          <string name="carefriend">关注好友</string>
          <string name="lovetype">恋爱类型</string>
          <string name="sendmessage">发送私信</string>
          <string name="success">操作成功</string>
          <string name="failed">操作失败</string>
          <string name="finduser">查找用户</string>
</resources>