<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/gray"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/height_layout"
        android:background="@color/background_purple_title"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/dialog_text_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="80dip"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:background="@drawable/mm_title_btn_right"
            android:text="@string/cancel"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/submit"
            android:layout_width="80dip"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_gravity="right"
            android:background="@drawable/mm_title_btn_pressed"
            android:text="@string/done"
            android:textColor="@android:color/white" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/height_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/background_purple"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/originpassword"
                android:textColor="@color/text_field_color" />

            <EditText
                android:id="@+id/TV_originpass"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:inputType="textPassword" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/newpassword"
                android:textColor="@color/text_field_color" />

            <EditText
                android:id="@+id/TV_newpass"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="1dp"
                android:layout_marginTop="1dp"
                android:layout_weight="5"
                android:ems="10"
                android:inputType="textPassword" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/newpasswordconfirm"
                android:textColor="@color/text_field_color" />

            <EditText
                android:id="@+id/TV_newpassconfirm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:inputType="textPassword" >

                <requestFocus />
            </EditText>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>