<?xml version="1.0" encoding="UTF-8"?>
<TabHost android:id="@android:id/tabhost" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="@color/background_purple"
            android:gravity="center_vertical" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/space_yuanfen" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dip"
                    android:text="@string/title"
                    android:textColor="@color/white"
                    android:textSize="18dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_alignParentRight="true"
                android:gravity="center"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/search"
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/abc_ic_search" />

                <ImageView
                    android:id="@+id/refresh"
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="2dip"
                    android:src="@drawable/__refresh2" />

                <ImageView
                    android:id="@+id/set"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/actionbar_more_icon" />

            </LinearLayout>

        </RelativeLayout>

        <FrameLayout
            android:id="@android:id/tabcontent"
            android:layout_width="fill_parent"
            android:layout_height="0.0dip"
            android:layout_weight="1.0"
            android:background="@color/white" />

        <TabWidget android:id="@android:id/tabs" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="0.0" />

            <RadioGroup
                android:id="@+id/main_radio"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/menu_users"
                    style="@style/main_tab_bottom"
                    android:layout_marginTop="2.0dip"
                    android:drawableTop="@drawable/_love_"
                    android:text="@string/user"
                    android:textColor="@color/black" />

                <RadioButton
                    android:id="@+id/menu_message"
                    style="@style/main_tab_bottom"
                    android:layout_marginTop="2.0dip"
                    android:drawableTop="@drawable/_love_"
                    android:text="@string/messages"
                    android:textColor="@color/black" />

                <RadioButton
                    android:id="@+id/menu_friends"
                    style="@style/main_tab_bottom"
                    android:layout_marginTop="2.0dip"
                    android:drawableTop="@drawable/_love_"
                    android:text="@string/myconcern"
                    android:textColor="@color/black" />

                <RadioButton
                    android:id="@+id/menu_info"
                    style="@style/main_tab_bottom"
                    android:layout_marginTop="2.0dip"
                    android:drawableTop="@drawable/_love_"
                    android:text="@string/me"
                    android:textColor="@color/black" />

            </RadioGroup>
    </LinearLayout>

</TabHost>
